test/parser/basic/018.stderr
At: "018.hac":12:
parse error: syntax error
parser stacks:
state	value
#STATE#	(imported-root-list) [8:1..18]
#STATE#	list<(root_item)>: (instance-decl) ... [10:1..6]
#STATE#	(imported-root) [12:1..18]
in state #STATE#, possible rules are:
	top_root : body .  (#RULE#)
	body : body . body_item  (#RULE#)
	optional_template_specification : .  (#RULE#)
acceptable tokens are: 
	end-of-file (reduce)
	'!' (shift)
	'(' (shift)
	'-' (shift)
	'[' (shift)
	'{' (shift)
	'}' (reduce)
	'~' (shift)
	ID (shift)
	FLOAT (shift)
	INT (shift)
	STRING (shift)
	SCOPE (shift)
	NAMESPACE (shift)
	OPEN (shift)
	CHP_LANG (shift)
	HSE_LANG (shift)
	PRS_LANG (shift)
	SPEC_LANG (shift)
	TREE_LANG (shift)
	SUBCKT_LANG (shift)
	DEFINE (reduce)
	DEFPROC (reduce)
	DEFCHAN (reduce)
	DEFTYPE (reduce)
	TYPEDEF (reduce)
	CHANNEL (shift)
	TEMPLATE (shift)
	ENUM (shift)
	BOOL_TRUE (shift)
	BOOL_FALSE (shift)
	INT_TYPE (shift)
	BOOL_TYPE (shift)
	PINT_TYPE (shift)
	PBOOL_TYPE (shift)
	PREAL_TYPE (shift)
